--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "comlink": "^4.3.1",
     "eventemitter3": "^4.0.7",
     "framer-motion": "^6.2.8",
+    "global": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -19,6 +21,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "standardized-audio-context": "^25.3.21",
+    "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "ws": "^8.5.0"
@@ -48,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.24",
     "@types/ws": "^8.5.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
