--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "framer-motion": "^6.2.8",
     "global": "^4.4.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
+    "react-circular-input": "^0.2.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
@@ -23,8 +25,10 @@
     "redux-thunk": "^2.4.1",
     "standardized-audio-context": "^25.3.21",
     "styled-components": "^5.3.3",
+    "tone": "^14.7.77",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8",
     "ws": "^8.5.0"
   },
   "scripts": {
