--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "standardized-audio-context": "^25.3.21",
     "styled-components": "^5.3.3",
     "tone": "^14.7.77",
+    "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
     "worker-loader": "^3.0.8",
